# vera

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  paper.bib  paper.md  vera-1877p122-r.csv  vera-1877p122-r.fits
crates/vera-catalog/: Cargo.toml
crates/vera-catalog/src/: csv_write.rs  fits_write.rs  lib.rs
crates/vera-fits/: Cargo.toml
crates/vera-fits/src/: lib.rs
crates/vera-pipeline/: Cargo.toml
crates/vera-pipeline/src/: background.rs  convolve.rs  detect.rs  gpu.rs  lib.rs  measure.rs
crates/vera-pipeline/src/shaders/: gaussian.wgsl  measure.wgsl
crates/vera-python/: Cargo.toml  pyproject.toml
crates/vera-python/python/vera/: __init__.py
crates/vera-python/src/: lib.rs
crates/vera-run/: Cargo.toml
crates/vera-run/src/: main.rs
crates/vera-viewer/: Cargo.toml
crates/vera-viewer/src/: main.rs
