[workspace]
members = [
    "crates/vera-fits",
    "crates/vera-pipeline",
    "crates/vera-catalog",
    "crates/vera-viewer",
    "crates/vera-run",
    "crates/vera-python",   # built with maturin, not cargo build
]
default-members = [
    "crates/vera-fits",
    "crates/vera-pipeline",
    "crates/vera-catalog",
    "crates/vera-viewer",
    "crates/vera-run",
]
resolver = "2"

[workspace.dependencies]
ndarray = "0.16"
rayon = "1"
thiserror = "2"
