[package]
name = "vera-pipeline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vera-background"
path = "src/bin/background.rs"

[[bin]]
name = "vera-detect"
path = "src/bin/detect.rs"

[[bin]]
name = "vera-measure"
path = "src/bin/measure.rs"

[dependencies]
vera-fits = { path = "../vera-fits" }
ndarray = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
