[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "vera-astro"
version = "0.1.0"
description = "GPU-native astronomical source extraction (Vera pipeline)"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["astronomy", "source-extraction", "photometry", "gpu"]

[tool.maturin]
module-name = "vera._vera"
python-source = "python"
